styles/utils.module.css
.containerIndex{
	padding: 15px;
	text-align: center;
	background-color: #f0f0f0;
}

.containerMap{
	padding: 15px;
	text-align: center;
	height: 100vh;
	width: 100vw;
}

.navbar{
	position: fixed;
	margin-block-start: 0em;
	background-color: #0984e3;
	display: inline-flex;
	width: 100%;
	height: 80px;
	align-items: center;
	border-bottom-style: solid;
	border-color: #0c60a0;
	z-index: 3;
}

.navbar > h1 {
	color: white;
	font-weight: 300;
	letter-spacing: 0.7px;
	margin-left: 15px; 
}

.navlinks {
	position: absolute;
	right: 20px;
}

.navbar > .navlinks >  a {
	border-radius: 4px;
	padding: 15px;
	margin-left: 30px;
	color: white;
} .navbar > .navlinks >  a:hover {
	background-color: #087cd4;
}

.heroImage {
	height: 65vh;
	width: fit-content;
	opacity: 0.5;
}

.searchH1{
	text-align: middle;
	margin-bottom: 30px;
	margin-top: 20px;
	color: #0984e3;
}

.mapH1{
	text-align: middle;
	font-size: 45px;
	margin-bottom: 0px;
	margin-top: 120px;
	color: #0984e3;
	width: auto;
	height: 60px;
}

.indexDivs{
	display: flex;
	justify-content: center;
	margin-bottom: 75px;
	margin-top: 65px;
}

/*-----------------------------------------------------------------*/
/* FORMS */

.forms {
	min-height: 400px;
	max-height: 600px;
	position: sticky;
	top: 160px;
	height: 400px;
	text-align: left;
	width: 260px;
}

.forms > h2 {
	font-size: 22px;
	color: #888;
	margin-bottom: 5px;
}

.forms > p {
	font-size: 15px;
	margin-top: 30px;
	color: #888;
}

.formSelects {
	display: inline-flex;
	flex-direction: column;
}

.formSelects > select {
	cursor: pointer;
	font-size: 20px;
	padding: 7px;
	margin-bottom: 4px;
	border-left-style: none;
	border-right-style: none;
	border-top-style: none;
	margin-left: 20px;
	color: #888;
	background-color: #f0f0f0;
	min-width: 248px;
} .formSelects > select:hover {
	color: black;
} .formSelects > select:focus {
	outline: none;
}
.active {
	background-color: #ddd !important;
	color: black !important;
	border-right-style: solid !important;
	border-color: #0984e3 !important;
	border-width: 5px !important;
	font-weight: bold;
	border-bottom-style: none !important;
}

.radioSelect {
	display: inline-flex;
	flex-direction: column;
	margin-left: 35px;
	color: #888;
}

/*-----------------------------------------------------------------*/
/* CARD/TABLE VIEW */

.view {
	margin-left: 30px;
	margin-right: 40px;
	width: 940px;
	min-height: 700px;
}

/*-----------------------------------------------------------------*/
/* VIEW BUTTONS */
.viewButtons {
	position: sticky;
	position: -webkit-sticky;
	top: 79.5px;
	background-color: #f0f0f0;
}
.viewButtons > button {
	border-style: solid;
	width: 50%;
	height: 60px;
	border-color: #f0f0f0;
	border-bottom-color: #ccc;
	border-radius: 5px;
	border-bottom-width: 5px;
	background-color: #f0f0f0;
	font-size: 20px;
	color: #888;
	font-weight: bold;
}
.viewButtons > button:hover {
	background-color: #d8e6f2;
	cursor: pointer;
	color: #0984e3;
}
.viewButtons > button:focus {
	outline: none;
}
.clicked {
	border-bottom-color: #0984e3 !important;
	color: #0984e3 !important;
}

/*-----------------------------------------------------------------*/
/* CARD VIEW */
.cardView {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin-top: 20px;
}

.card {
	border-style: solid;
	border-color: #bbb;
	border-width: 1px;
	border-radius: 3px;
	box-shadow: 0.1px 0.1px 5px #bbb;
	width: 931px;
	margin: 10px 0px 10px 0px;
	background-color: white;
}

.cardHeader {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin: 14px 28px 7px 20px;
}

#cardHeaderTitle {
	color: #0984e3;;
	font-size: 20px;
	font-weight: bold;
}

#cardHeaderSubTitle {
	margin-top: 3px;
	color: #888;
}

#cardBody {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-end;
	margin: 7px 0px 12px 20px;
}

#cardInfo {
	text-align: left;
	padding-top: 0px;
} .icon {
	color: #888;
	font-size: 18px;
	margin-right: 15px;
}

#cardPrice {
	padding-bottom: 1px;
}

#cardBody > a > button {
	margin-right: 25px;
	margin-bottom: 10px;
	background-color: white;
	border: 1px solid #bbb;
	border-radius: 4px;
	padding: 4px 10px 4px 10px;
	cursor: pointer;
	font-size: 16px;
	color: #888;
} #cardBody > a > button:hover {
	background-color: #eee;
	color: black;
}

/*-----------------------------------------------------------------*/
/* TABLE VIEW */
.table {
	color: #444;
	width: 940px;
	margin-top: 0px;
}
.table > thead th {
	position: sticky;
	position: -webkit-sticky;
	top: 172px;
	background-color: #f0f0f0;
	height: 40px;
	border-bottom: 3px solid #888;
} #line {
	position: sticky;
	position: -webkit-sticky;
	top: 140px;
	border: 16px solid #f0f0f0;
	margin: 0px;
}
.innerTableDiv {
	height: 365px;
	min-height: 365px;
	max-height: 365px;
	overflow-y: auto;
}

/*-----------------------------------------------------------------*/
/* INFO (text right of table) */
.info {
	position: -webkit-sticky;
	position: sticky;
	top: 160px;
	text-align: left;
	width: 300px;
	height: 400px;
	color: #888;
	font-size: 15px;
} .info > p {
	margin-bottom: 13px;
} .info > a {
	color: #888;
} .info > a:hover {
	text-decoration: underline;
	color: #888;
} #copywright {
	color: #555;
}

/*-----------------------------------------------------------------*/
/* FOOTER */
.footer {
	background-color: #1f2328;
	margin-top: 100px;
	color: #fff;
	font-weight: 300;
	padding: 5px;
	text-align: end;
	padding-right: 60px;
	width: 100vw;
	height: 60px;
}

.compContainer{
	display: inline-flex;
	flex-direction: column;
	height: auto;
}

.comparisonView{
	margin: 10px;
	box-shadow: 4px 4px 3px #BBB;
    border-bottom-right-radius: 10px;
	height: 270px;
	width: 300px;
	display: inline-flex;
    align-items: center;
    padding: 5px 15px;
    flex-direction: column;
}

.mapCompContainer{
	display: inline-flex;
	flex-direction: row;
	width: auto;
	height: auto;

}

.mapView{
	border-radius: 10px;
	margin: 10px;
	height: 105vh;
	width: 100%;
	margin-top: -310px;
	position: static;
	z-index: 1;
}

.marker{
	background: transparent;
	border: none;
	cursor: pointer;
	width: 25px;
	height: 25px;
}

.imgView{
	background: transparent;
}

.compButtons{
	display: inline-block;
	border: 1px solid #0984e3;
	border-radius: 3px;
	color: #0984e3;
	background-color: white;
	padding: 10px;
	margin: 5px;
	text-align: center;
	font-size: 15px;
	width: 135px;
}

.popup{
	height: 190px;
	width: 300px;
	padding: 0px;
	margin: 0px;
}

.popHead{
	font-size: 20px;
	margin: 5px;
	padding: 0px;
	text-align: middle;
}

.popContent{
	padding: 0px;
	margin: 5px;
	font-size: 15px;
	text-align: left;
	width: 300px;
}

.compHead{
	font-size: 20px;
	margin: 5px;
	padding: 5px;
	color: #888;
}

.compContent{
	text-align: left;
	font-size: 15px;
	padding: 5px;
	margin: 0px;
	margin-left: 20px;
}

.mapForms{
	margin: 10px;
	margin-top: 40px;
	box-shadow: 4px 4px 3px #BBB;
    border-bottom-right-radius: 10px;
	height: 300px;
	width: 300px;
	text-align: left;
}

.filterMap{
	display: inline-flex;
}

.mapInfo{
	position: absolute;
	right: 20px;
	top: 80px;
	z-index: 1;
}

